Customizing deployment part 1.

--- a/config/bash/bashrc.j2
+++ b/config/bash/bashrc.j2
@@ -26,10 +26,8 @@ lfcd() {
 export LESS=-R
 export PAGER="less -R"
 
-alias nano='nano -c'
-alias en='sudo -i'
 alias ls='lsd'
-alias ll='ls -lAh --group-dirs first'
+alias ll='lsd -lh --group-dirs first'
 alias tree='lsd --tree'
 alias grep='grep --color=auto'
 alias mkdir='mkdir -pv'
@@ -38,8 +36,6 @@ alias du='du -ch'
 alias ip='ip --color=auto'
 alias less='less -R'
 alias ssh='TERM=xterm-256color ssh'
-alias k9s='TERM=xterm-256color k9s'
-alias popeye='TERM=xterm-256color popeye'
 alias wget='wget -c --hsts-file=$XDG_CONFIG_HOME/wget/wget-hsts'
 alias code='code --enable-features=UseOzonePlatform --ozone-platform=wayland'
 
