--- a/templates/waybar/config.j2
+++ b/templates/waybar/config.j2
@@ -101,12 +101,15 @@
     },
 
     "network": {
+{% if WLAN_ADAPTER %}
+	"interface": "{{ WLAN_ADAPTER }}",
+{% endif %}
         "interval": 5,
         "format-wifi": "  {essid} ({signalStrength}%)", // Icon: wifi
         "format-ethernet": "  {ifname}: {ipaddr}/{cidr}", // Icon: ethernet
         "format-disconnected": "⚠  Disconnected",
         "tooltip-format": "{ifname}: {ipaddr}",
-        "on-click": "xfce4-terminal -e 'nmtui'",
+        "on-click": "nm-connection-editor",
     },
     "network#vpn": {
         "interface": "tun0",
