--- a/templates/waybar/config.j2
+++ b/templates/waybar/config.j2
@@ -38,8 +38,8 @@
     "idle_inhibitor": {
         "format": "{icon} ",
         "format-icons":{
-            "activated": "<span color=\"#d42a2a\"></span>",
-            "deactivated": ""
+            "activated": "",
+            "deactivated": "<span color=\"#d42a2a\"></span>",
         }
     },
 
