Add new font for waybar

--- a/config/waybar/style.css
+++ b/config/waybar/style.css
@@ -56,8 +56,8 @@ Arc-Dark Color Scheme
     background: transparent;
     color: #bebebe;
     background-color: @base1;
-    font-family: UbuntuMono;
-    font-size: 14px;
+    font-family: "Arimo Nerd Font";
+    font-size: 13px;
 }
 
 /* Every modules */
